@@ -13,20 +13,69 @@ import no.ntnu.idatt2003.view.PositionChangeObserver;
  */
 public class Player {
 
+  /**
+   * The position of the player on the board.
+   */
   public int position;
+
+  /**
+   * The name of the player.
+   */
   public String playerName;
+
+  /**
+   * The number of the player.
+   */
   public int playerNumber;
+
+  /**
+   * The birthdate of the player.
+   */
   private final Date birthDate;
+
+  /**
+   * boolean for if the player is active
+   */
   public boolean playerActive;
+
+  /**
+   * boolean for if the player is paused.
+   */
   public boolean playerPause = false;
 
+  /**
+   * The total balance of the player.
+   */
   private int balance = 10000;
-  private ArrayList<Property> properties = new ArrayList<Property>();
+
+  /**
+   * The list of properties owned by the player.
+   */
+  private final ArrayList<Property> properties = new ArrayList<>();
+
+  /**
+   * The jail status of the player.
+   */
   private int jailStatus = 0;
+
+  /**
+   * Boolean for if the payer has a get out of jail free card.
+   */
   private boolean getOutOfJailCard = false;
 
+  /**
+   * The observer for the player.
+   */
   private PositionChangeObserver observer;
+
+  /**
+   * The paths to the dice images.
+   */
   public URL[] dicePaths;
+
+  /**
+   * The picture of the player.
+   */
   private URL picture;
 
   /**
@@ -45,6 +94,8 @@ public class Player {
 
   /**
    * Actives the player for the game.
+   *
+   * @param active the active status of the player
    */
   public void setPlayerActive(Boolean active) {
     this.playerActive = active;
@@ -62,7 +113,7 @@ public class Player {
   /**
    * sets the position of the player
    *
-   * @param position
+   * @param positionIn the new position of the player
    */
   public void setPosition(int positionIn) {
     this.position = positionIn;
@@ -91,7 +142,7 @@ public class Player {
   }
 
   /**
-   * adds the inputed property to the players property list
+   * adds the inputted property to the players property list
    *
    * @param property the property to add to the players property list
    */
@@ -103,6 +154,11 @@ public class Player {
     }
   }
 
+  /**
+   * returns the players property list
+   *
+   * @return the players property list
+   */
   public ArrayList<Property> getPropertyList() {
     return this.properties;
   }
@@ -140,7 +196,7 @@ public class Player {
    * Uses the get out of jail card if the player has one.
    */
   public void useJailCard() {
-    if (this.getOutOfJailCard == true) {
+    if (this.getOutOfJailCard) {
       this.jailStatus = 0;
       this.getOutOfJailCard = false;
     }
@@ -178,7 +234,7 @@ public class Player {
   }
 
   /**
-   * adds the the amount to the players balance
+   * adds the amount to the players balance
    *
    * @param amount the amount of money to add to the players balance
    */
@@ -201,7 +257,7 @@ public class Player {
   /**
    * returns the players pause status
    *
-   * @returns the players pause status
+   * @return the players pause status
    */
   public boolean getPlayerPause() {
     return this.playerPause;
@@ -209,6 +265,8 @@ public class Player {
 
   /**
    * returns the players jail status
+   *
+   * @return the players jail status
    */
   public int getJailStatus() {
     return this.jailStatus;
@@ -216,6 +274,8 @@ public class Player {
 
   /**
    * Sets the dice paths for the player.
+   *
+   * @param dicePaths the paths to the dice images
    */
   public void setDicePaths(URL[] dicePaths) {
     this.dicePaths = dicePaths;
@@ -305,9 +365,11 @@ public class Player {
   /**
    * Throws the dice and moves the player on the board, and does actions according on where it
    * lands
+   *
+   * @param game the game instance
    */
   public void move(Game game) {
-    if (playerPause == false && jailStatus == 0) {
+    if (!playerPause && jailStatus == 0) {
       int diceRoll = Dice.rollDice(2, this);
       int finalTile = game.getBoard().getGameboard().size();
       if (this.position + diceRoll <= finalTile) {
@@ -316,15 +378,15 @@ public class Player {
           .get(finalTile - 1) instanceof FinishTile) {
         this.position = finalTile - (diceRoll - (finalTile - this.position));
       } else if ((this.position + diceRoll > finalTile) && game.getBoard().getGameboard()
-          .get(0) instanceof StartTile) {
+          .getFirst() instanceof StartTile) {
         this.position = (this.position + diceRoll) - finalTile;
         if (this.position != 0) {
-          game.getBoard().getGameboard().get(0).action(this, game);
+          game.getBoard().getGameboard().getFirst().action(this, game);
         }
       }
 
       game.getBoard().getGameboard().get(this.position - 1).action(this, game);
-    } else if (playerPause == true) {
+    } else if (playerPause) {
       playerPause = false;
     }
 
@@ -334,6 +396,11 @@ public class Player {
     game.nextPlayer();
   }
 
+  /**
+   * to string method for the player class
+   *
+   * @return player name
+   */
   @Override
   public String toString() {
     return playerName;
